@@ -1,3 +1,7 @@
+2007-02-27  P. Henrique Silva  <henrique@astro.ufsc.br>
+
+	* src/chimera/drivers/paramount.py: New.
+
 2007-02-09  P. Henrique Silva  <henrique@astro.ufsc.br>
 
 	* chimera/uts: End of UTS :)
